fixed text alignment

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ html,body {
 
 .main {
 	position: relative;
-	top: 100px;
+	top: 50px;
 	text-align: center;
 }
 
